[tool.poetry]
name = "aschii_chars"
version = "0.1.0"
description = ""
authors = ["Juan Vanegas <jandvanegas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.74.1"
requests = "^2.27.1"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
